fixing margins and padding on mobile layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,32 @@
 body {
-	margin: 0;
+	margin: 0 auto;
 	font-family: 'Josefin Sans', sans-serif;
-	background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+	/*background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));*/
+	background-color: #707070;
 	line-height: 1.6;
 	color: hsl(0, 36%, 70%);
+	max-width: 375px;
+
 }
 
 .container {
-	width: 90%;
+	
 	margin: 0 auto;
+	background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
 }
 
 .logo {
 	width: 35%;
-	padding: 2em 0;
+	padding: 2em 1em;
+	margin: 0;
 }
 
 .main {
 	text-align: center;
-	margin-top: 3em;
-	padding: 0 1em;
+	margin-top: -1em;
+	padding: 4em 1em 3em;
 }
+
 
 h1 {
 	text-transform: uppercase;
@@ -45,7 +51,10 @@ input {
 	padding: 1em 1em;
 	border: 1px solid hsl(0, 36%, 70%);
 	background-color: transparent;
+}
 
+input:focus {
+	outline: none;
 }
 
 ::placeholder {
@@ -70,6 +79,8 @@ input {
 .arrow:hover ~ input {
 	border: 1px solid hsl(0, 93%, 68%);
 }
+
 footer {
-	margin-bottom: 2em;
+	margin: 0;
+	padding: 1em;
 }
